# docs/swagger.json
@@ -2,15 +2,12 @@
     "schemes": [
         "http",
         "//",
-        "Si",
-        "usas",
-        "HTTPS",
-        "en",
-        "producción,",
-        "añade",
-        "\"https\"",
-        "aquí",
-        "también"
+        "ESTA",
+        "ANOTACIÓN",
+        "SERÁ",
+        "SOBREESCRITA",
+        "POR",
+        "main()"
     ],
     "swagger": "2.0",
     "info": {
@@ -28,7 +25,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "localhost:8080 // ESTA ANOTACIÓN SERÁ SOBREESCRITA POR main()",
     "basePath": "/",
     "paths": {
         "/proyectos": {
